# Infora-Task

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: faqs.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx  theme.js
src/faq_assistant/: __init__.py  api.py  chatbot.py  cli.py  config.py  knowledge_base.py  matcher.py  models.py  run_api.py
tests/: test_chatbot.py  test_matcher.py
