[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faq-assistant"
version = "1.0.0"
description = "A beginner-friendly AI FAQ Assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"fastapi>=0.115.0",
	"uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
